...
                    android:layout_marginStart="@dimen/recipe_name_tv_margin_start"
                    android:layout_marginTop="@dimen/recipe_name_tv_margin_top"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/recipe_name_tv_text_size"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="Nutella Pie"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="@dimen/recipe_name_tv_margin_start" />

                <TextView
                    android:id="@+id/recipe_servings_tv"
                    android:layout_width="wrap_content"
...
