...
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/playerView"
        tools:text="Do the cooking stuff" />

    <Button
        android:id="@+id/next_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/next_btn_margin_bottom"
        android:layout_marginEnd="@dimen/next_btn_margin_end"
        android:text="@string/next_button_string"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginRight="@dimen/next_btn_margin_end" />

    <Button
        android:id="@+id/previous_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/prev_button_margin_bottom"
        android:layout_marginStart="@dimen/prev_button_margin_start"
        android:text="@string/previous_button_string"
        app:layout_constraintBottom_toBottomOf="parent"
...
