<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <FrameLayout
        android:id="@+id/step_fragment_container"
        android:layout_height="match_parent"
        android:layout_width="match_parent" >
    </FrameLayout>

</LinearLayout>

